--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "bootstrap": "^5.3.3",
+    "esbuild": "^0.25.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bulma-components": "^4.1.0",
