--- a/package.json
+++ b/package.json
@@ -18,16 +18,17 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "esbuild": "^0.25.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bulma-components": "^4.1.0",
-    "react-dom": "^19.0.0",
-    "chart.js": "^4.4.8",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.3.0"
+    "react-router-dom": "^7.3.0",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
