--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "serve": "browser-sync start --proxy 'localhost:5173' --files 'src/**/*'",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -18,14 +19,14 @@
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.8",
     "esbuild": "^0.25.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bulma-components": "^4.1.0",
-    "react-dom": "^19.0.0",
-    "chart.js": "^4.4.8",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0"
   },
@@ -34,6 +35,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
+    "browser-sync": "^3.0.3",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
