--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
     "esbuild": "^0.25.1",
+    "mongodb": "^6.15.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bulma-components": "^4.1.0",
