--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-bulma-components": "^4.1.0",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.0.0",
