--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "serve": "browser-sync start --proxy 'localhost:5173' --files 'src/**/*'",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -20,6 +19,7 @@
     "@mui/material": "^6.4.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "emoji-picker-react": "^4.12.2",
     "esbuild": "^0.25.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
@@ -35,7 +35,6 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
-    "browser-sync": "^3.0.3",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
